compiler/testData/diagnostics/tests/shadowing/ShadowVariableInNestedClosure.jet
fun f(): Int {
    var i = 17
    { (): Unit -> var <!NAME_SHADOWING!>i<!> = 18 }
    return i
}
